# BlockMind

./: .dockerignore  .gitignore  AUDIT_REPORT.md  Dockerfile  README-ar.md  README-de.md  README-en.md  README-es.md  README-fr.md  README-id.md  README-it.md  README-ja.md  README-ko.md  README-pt.md  README-ru.md  README-th.md  README-tr.md  README-vi.md  README.md  TEST_REPORT.md  config.example.yaml  docker-compose.yaml  index.html  install.bat  install.sh  pyproject.toml  requirements.txt  start.bat  start.sh  start_all.bat  start_mc.bat  start_mc.sh
.github/workflows/: build.yml  skills.yml
config/: config.example.yaml
docs/: LANDING_DESIGN.md  MOD_BUILD.md  TASKS.md  WINDOWS.md
mod/: build.gradle  gradle.properties  settings.gradle
scripts/: blockmind.service  check_completeness.py  deploy.sh  healthcheck.sh
skills/marketplace/: .index.json  auto_mine_diamonds.yaml  auto_sugar_cane.yaml  auto_torch.yaml  glass_house.yaml  kill_ender_dragon.yaml
src/: main.py
src/ai/: __init__.py  auto_repair.py  generator.py  main_agent.py  operation_agent.py  prompts.py  provider.py  takeover.py  token_tracker.py
src/config/: loader.py  task_registry.py
src/core/: engine.py  event_bus.py  idle_detector.py  idle_history.py  idle_scheduler.py  memory.py  task_classifier.py  task_pool.py  task_router.py
src/game/: __init__.py  action_queue.py  actions.py  chat.py  connection.py  inventory.py  navigation.py  pathfinding.py  perception.py
src/mod_client/: __init__.py  client.py  models.py  ws_client.py
src/monitoring/: health.py  (+6 more)
tests/: conftest.py  test_all.py  test_memory.py
(+51 files in other folders)
