[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockmind"
version = "3.1.0"
description = "Minecraft AI Companion — Fabric Mod + AI 驱动 + 记忆系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "BlockMind Team"},
]
keywords = ["minecraft", "ai", "fabric", "companion", "mod"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "anthropic>=0.20",
    "httpx>=0.25",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-multipart>=0.0.6",
    "jinja2>=3.1",
    "websockets>=12.0",
    "bcrypt>=4.0",
    "psutil>=5.9",
    "aiohttp>=3.9",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/bmbxwbh/BlockMind"
Documentation = "https://github.com/bmbxwbh/BlockMind#readme"
Repository = "https://github.com/bmbxwbh/BlockMind"
Issues = "https://github.com/bmbxwbh/BlockMind/issues"

[tool.setuptools.packages.find]
include = ["src*", "skills*"]
exclude = ["tests*", "mod*", ".github*"]
